--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,3 +1,19 @@
+body {
+    background-color: white;
+
+}
+
+body::after{
+    content: "";
+    position: absolute;
+    background:#f0f0f5;
+    top: 260px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
 #page-search-results {
     width: 90%;
     max-width: 1100px;
@@ -76,13 +92,3 @@ main .card p{
     color: #6C6C80;
 }
 
-body::after{
-    content: "";
-    position: fixed;
-    background: white;
-    top: 260px;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-}
